--- a/Utilidades/ErrorMensaje.xaml
+++ b/Utilidades/ErrorMensaje.xaml
@@ -4,9 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UVemyCliente.Utilidades"
-        mc:Ignorable="d"
-        Title="ErrorMensaje" Height="450" Width="800">
+        mc:Ignorable="d" Height="200" Width="260">
     <Grid>
-        
+        <Image Source="/Recursos/delete.png" Height="60"></Image>
+        <TextBlock HorizontalAlignment="Center" Margin="0 20 0 0">Error</TextBlock>
     </Grid>
 </Window>
