--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,6 +6,6 @@
         xmlns:local="clr-namespace:UVemyCliente"
         mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="1336">
     <Grid>
-        <Frame Source="Vistas/DetallesCursoPagina.xaml"/>
+        <Frame NavigationUIVisibility="Hidden" Source="Vistas/DetallesCursoPagina.xaml"/>
     </Grid>
 </Window>
