--- a/Vistas/DetallesCursoPagina.xaml
+++ b/Vistas/DetallesCursoPagina.xaml
@@ -88,7 +88,7 @@
                                     <ColumnDefinition Width="auto"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Style="{StaticResource estiloTxtBlockInfo}">1</TextBlock>
-                                <TextBlock Grid.Column="1" Style="{StaticResource estiloTxtBlockInfo}">Aplicaciones que se pueden crear con el lenguaje de programacion de C#</TextBlock>
+                                <TextBlock Grid.Column="1" Style="{StaticResource estiloTxtBlockInfo}" TextWrapping="Wrap" Width="1050">Aplicaciones que se pueden crear con el lenguaje de programacion de C# </TextBlock>
                                 <Button Grid.Column="2" Style="{StaticResource estiloBtnBackground}" FontSize="15" Width="100" Click="ClicVerClase">Ver más</Button>
 
                             </Grid>
@@ -131,7 +131,7 @@
                 </Border>
                 <StackPanel Grid.Column="1">
                     <Button Style="{StaticResource estiloBtnBackground}" Width="350" Margin="0 10 0 5">Modificar curso</Button>
-                    <Button Style="{StaticResource estiloBtnBackground}" Width="350" Margin="0 5 0 10">Ver estadísticas del curso</Button>
+                    <Button Style="{StaticResource estiloBtnBackground}" Width="350" Margin="0 5 0 10" Click="ClicVerEstadisticasCurso">Ver estadísticas del curso</Button>
                 </StackPanel>
 
                 <Border Grid.Row="1" Grid.Column="2" Grid.RowSpan="2" Height="320" Margin="30 0 0 0" BorderThickness="3" BorderBrush="#000000" CornerRadius="30">
