--- a/Vistas/InicioSesionPagina.xaml
+++ b/Vistas/InicioSesionPagina.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:UVemyCliente.Vistas"
       mc:Ignorable="d" 
       d:DesignHeight="768" d:DesignWidth="1366"
-      Title="InicioSesionPagina">
+      Title="InicioSesionPagina" Loaded="CargarPagina">
 
     <Page.Resources>
         <Style x:Key="estiloTxtBlockFormularioInicioSesion" TargetType="TextBlock">
@@ -70,88 +70,6 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-
-        <Style x:Key="estiloLstBoxDocumentos" TargetType="ListBox">
-            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Visible"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ListBox}">
-                        <Border BorderBrush="#5D737E" BorderThickness="3" CornerRadius="30" Background="#D9E1E4">
-                            <ScrollViewer Margin="10" Focusable="false">
-                                <StackPanel Margin="2" IsItemsHost="True" />
-                            </ScrollViewer>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style x:Key="estiloBtnX" TargetType="Button">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <Image Source="/Recursos/delete.png" Height="50" Width="50"/>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Cursor" Value="Hand"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-
-        <Style x:Key="estiloLstBoxItemDocumentos" TargetType="ListBoxItem">
-            <Setter Property="FontFamily" Value="{StaticResource NunitoFont}"/>
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                        <Border Background="#FFFFFF" CornerRadius="30" Height="60" Margin="15 5">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-                                <ContentPresenter VerticalAlignment="Center" Margin="20 0"/>
-                                <Button Grid.Column="1" Style="{StaticResource estiloBtnX}" HorizontalAlignment="Right" Margin="0 0 30 0"></Button>
-                            </Grid>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style x:Key="estiloBtnAgregarDocumento" TargetType="Button">
-            <Setter Property="Background" Value="#0A122A"/>
-            <Setter Property="Foreground" Value="#ffffff"/>
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="FontFamily" Value="{StaticResource NunitoItalicFont}"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="20">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 10">
-                                <ContentPresenter.ContentTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Text="{Binding}" TextWrapping="Wrap" TextAlignment="Center"/>
-                                    </DataTemplate>
-                                </ContentPresenter.ContentTemplate>
-                            </ContentPresenter>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Cursor" Value="Hand"/>
-                </Trigger>
-                <Trigger Property="IsEnabled" Value="False">
-                    <Setter Property="Background" Value="#939393"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-
     </Page.Resources>
 
     <Grid Background="#FFFFFF">
@@ -168,10 +86,10 @@
 
         <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" >
             <TextBlock Style="{StaticResource estiloTxtBlockFormularioInicioSesion}" TextAlignment="Center" Margin="0,50,0,5">Correo electrónico</TextBlock>
-            <TextBox Name="txtBoxCorreoElectronico" Style="{StaticResource estiloTxtBoxFormularioInicioSesion}" VerticalScrollBarVisibility="Disabled" Margin="0,0,0,20"/>
+            <TextBox Name="txtBoxCorreoElectronico" Style="{StaticResource estiloTxtBoxFormularioInicioSesion}" VerticalScrollBarVisibility="Disabled" Margin="0,0,0,20" MaxLength="600" Width="300" Height="50.55"/>
 
             <TextBlock Style="{StaticResource estiloTxtBlockFormularioInicioSesion}" TextAlignment="Center">Contraseña</TextBlock>
-            <PasswordBox Name="pwdBoxContrasena" Style="{StaticResource estiloPwdBoxFormularioInicioSesion}"/>
+            <PasswordBox Name="pwdBoxContrasena" Style="{StaticResource estiloPwdBoxFormularioInicioSesion}" MaxLength="18"/>
             <TextBlock Name="txtBlockMensajeError" Style="{StaticResource estiloTxtBlockFormularioInicioSesion}" TextAlignment="Left" FontWeight="Medium" Foreground="Red" Margin="0 0 0 20" TextWrapping="Wrap" HorizontalAlignment="Center" Width="300"/>
 
             <Button Style="{StaticResource estiloBtnInicioSesion}" Content="Iniciar sesión" Click="ClicIniciarSesion" Margin="0 50 0 0"/>
