--- a/Vistas/EstadisticasCursoPagina.xaml
+++ b/Vistas/EstadisticasCursoPagina.xaml
@@ -7,6 +7,21 @@
       mc:Ignorable="d" d:DesignHeight="1036" d:DesignWidth="1336">
 
     <Page.Resources>
+        <Style x:Key="estiloBtnDescargar" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Image Source="/Recursos/downloads.png" Margin="0"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Cursor" Value="Hand"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
         <Style x:Key="estiloTxtBoxInfo" TargetType="TextBox">
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="FontFamily" Value="{StaticResource NunitoFont}"/>
@@ -115,7 +130,7 @@
         </Style>
     </Page.Resources>
 
-    <Grid Background="#ffffff">
+    <Grid Background="#ffffff" Name="grdBackground">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
@@ -142,7 +157,20 @@
                     <Border Background="#000000" CornerRadius="20" Margin="0 15 50 15" Height="120">
                         <TextBlock FontFamily="{StaticResource NunitoFont}" Foreground="#ffffff" FontSize="23" TextWrapping="Wrap" Margin="20 15" Name="txtBlockNombreCurso"></TextBlock>
                     </Border>
-                    <Button Grid.Column="1" Style="{StaticResource estiloBtnBackground}" Margin="20 10" Height="100">Generar un documento con las estadísticas</Button>
+                    <Button Grid.Column="1" Style="{StaticResource estiloBtnBackground}" Margin="20 10" Height="100" Click="ClicGenerarDocumento" Name="btnGenerarDocumento">Generar un documento con las estadísticas</Button>
+                    <Border Background="#000000"  CornerRadius="20" Grid.Column="1" Height="100" Name="brdDescargaDocumento" Visibility="Collapsed">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="190"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock TextWrapping="Wrap" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="{StaticResource NunitoFont}" FontSize="18"
+                                       Margin="5 0" Foreground="#ffffff" Name="txtBlockNombreReporte"></TextBlock>
+                            <Border Grid.Column="1" Background="#ffffff" Margin="20 20 20 20" CornerRadius="30" Width="60">
+                                <Button Style="{StaticResource estiloBtnDescargar}" Width="35" Height="35" Margin="0" Click="ClicDescargar"></Button>
+                            </Border>
+                        </Grid>
+                    </Border>
                 </Grid>
 
                 <Grid Grid.Row="1" >
@@ -225,6 +253,9 @@
                         </Border>
                         <ListBox Grid.Row="1" Height="500" ItemContainerStyle="{StaticResource estiloLstBoxClase}" BorderBrush="#000000" BorderThickness="3" Name="lstBoxClases">
                         </ListBox>
+                        <Border Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Name="brdNoHayClases" Visibility="Collapsed">
+                            <TextBlock FontFamily="{StaticResource NunitoFont}" FontSize="32" Foreground="#5f5f5f">No hay clases asociadas al curso</TextBlock>
+                        </Border>
                     </Grid>
                     <Grid Margin="15 0 0 20" Grid.Column="1">
                         <Grid.RowDefinitions>
